--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ server.port=8888
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=karthi@2005
-spring.datasource.url= jdbc:mysql://localhost:3306/erp_db
+spring.datasource.password=wimkGlZftoazGDvxGlwVDnYUemIGTOzw
+spring.datasource.url= jdbc:mysql://root:wimkGlZftoazGDvxGlwVDnYUemIGTOzw@junction.proxy.rlwy.net:14247/railway
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
